Update .env.example with placeholders

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,2 +1,15 @@
-GOOGLE_CLIENT_ID=your-client-id-here
-GOOGLE_CLIENT_SECRET=your-secret-here
+# ========== Server Configuration ==========
+PORT=5000
+MONGO_URI=your_mongodb_connection_string_here
+JWT_SECRET=your_jwt_secret_key_here
+SESSION_SECRET=your_session_secret_key_here
+
+# ========== Google OAuth Credentials ==========
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_CALLBACK_URL=http://localhost:5000/auth/google/callback
+
+# ========== LinkedIn OAuth (if applicable) ==========
+LINKEDIN_CLIENT_ID=your_linkedin_client_id_here
+LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret_here
+LINKEDIN_CALLBACK_URL=http://localhost:5000/auth/linkedin/callback
