--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.7",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.11",
     "html2pdf.js": "^0.10.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
