post generator api connected

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -13,3 +13,4 @@ GOOGLE_CALLBACK_URL=http://localhost:5000/auth/google/callback
 LINKEDIN_CLIENT_ID=your_linkedin_client_id_here
 LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret_here
 LINKEDIN_CALLBACK_URL=http://localhost:5000/auth/linkedin/callback
+OPENROUTER_API_KEY=your-actual-openrouter-key
