--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
-    "bootstrap": "^5.3.7",
+    "bootstrap": "^5.3.8",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "^12.23.11",
+    "framer-motion": "^12.23.12",
     "html2pdf.js": "^0.10.3",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dnd": "^16.0.1",
@@ -30,7 +31,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "react-to-print": "^3.1.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
