--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "has-flag": "^4.0.0",
     "is-fullwidth-code-point": "^3.0.0",
     "lodash": "^4.17.21",
+    "react-typed": "^2.0.12",
     "require-directory": "^2.1.1",
     "rxjs": "^7.8.2",
     "shell-quote": "^1.8.3",
@@ -34,6 +35,7 @@
     "supports-color": "^8.1.1",
     "tree-kill": "^1.2.2",
     "tslib": "^2.8.1",
+    "typed.js": "^2.1.0",
     "wrap-ansi": "^7.0.0",
     "y18n": "^5.0.8",
     "yargs": "^17.7.2",
