about page designed

--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "bootstrap": "^5.3.8",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.24",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.542.0",
     "react": "^19.1.0",
@@ -32,7 +32,8 @@
     "react-router-dom": "^7.7.0",
     "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
